# translation-service-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/translation_service_challenge/: __init__.py  db.py  env.py  utils.py
