[project]
name = "translation-service-challenge"
version = "0.1.0"
description = "A simple translation service."
authors = [
    { name = "Norbert Elter", email = "72046715+itsyoboieltr@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "googletrans>=4.0.0-rc1",
    "pymongo[srv]>=4.6.3",
    "motor>=3.4.0",
    "pydantic-settings>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mypy>=1.9.0"
]

[tool.rye.scripts]
dev = "uvicorn src.translation_service_challenge:app --reload"
start = "uvicorn src.translation_service_challenge:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/translation_service_challenge"]

[tool.pylint.messages_control]
disable = ["import-error", "unused-argument", "redefined-builtin"]
